--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-<div id="background"><img src="assets/bg5.jpg" alt="moustache ilustration"></div>
+<div class="left"></div>
+<div class="right"></div>
 
 <input type="checkbox" id="toggler">
 
@@ -17,7 +18,10 @@
 	<label for="toggler" class="hook">☰</label>
 
 <div class="menu">
+		
 	<ul>
+		<div id="myname"><p>Sylvio</p></div>
+		<div id="myoc"><p>Content Creator</p></div>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="about.html">About</a></li>
 		<li><a href="works.html">Works</a></li>
@@ -31,8 +35,6 @@
 			</div>
 
 	<div class="content">
-
-	<img id="lol" src="assets/forside.png" alt="grade">
 
 	</div>
 		<br>
