--- a/works.html
+++ b/works.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+	<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="UTF-8">
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-<div id="background"><img src="assets/bg5.jpg" alt="grid"></div>
+<div class="left"></div>
+<div class="right"></div>
 
 <input type="checkbox" id="toggler">
 
@@ -18,17 +19,14 @@
 
 <div class="menu">
 	<ul>
+		<div id="myname"><p>Sylvio</p></div>
+		<div id="myoc"><p>Content Creator</p></div>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="about.html">About</a></li>
 		<li><a href="works.html">Works</a></li>
 		<li><a href="contact.html">Contact</a></li>
 	</ul>
 	</div>
-
-	<div class="logo">
-			<div id="title"> <h1>Sylvio</h1> </div>
-			<div id="kicker"> <h2>Content Creator</h2> </div>
-			</div>
 
 	<div class="content">
 
